src/runtime/crates/z42-macros/tests/fail/module_invalid_name.rs
use z42_macros::module;

struct Counter;

module! {
    name: "z42.bad-name",
    types: [Counter],
}

fn main() {}
